--- a/CustomView/app/src/main/res/layout/activity_dispatch.xml
+++ b/CustomView/app/src/main/res/layout/activity_dispatch.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.android.customview.dispatch.MyLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.android.customview.touchevent.MyLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_layout"
     android:layout_width="match_parent"
@@ -16,4 +16,4 @@
         android:text="Button1" />
 
 
-</com.android.customview.dispatch.MyLayout>
+</com.android.customview.touchevent.MyLayout>
