--- a/CustomView/app/src/main/res/layout/activity_main.xml
+++ b/CustomView/app/src/main/res/layout/activity_main.xml
@@ -34,11 +34,19 @@
         app:layout_constraintTop_toBottomOf="@id/textview" />
 
     <Button
+        android:id="@+id/calculator"
         style="@style/buttonStyle"
         android:onClick="skipToCalculator"
         android:text="Calculator"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/infiniteviewpager" />
+    <Button
+        style="@style/buttonStyle"
+        android:onClick="skipToPartActivity"
+        android:text="ActivityPart"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/calculator" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
