--- a/CustomView/mylibrary/src/main/res/layout/layout_window.xml
+++ b/CustomView/mylibrary/src/main/res/layout/layout_window.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/pop_layout"
-    android:layout_width="match_parent"
+    android:background="#75000000"
+    android:layout_width="200dp"
     android:layout_height="match_parent">
 
     <TextView
@@ -19,7 +20,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/tv_two"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="国家" />
+        android:text="国家" />
 
     <TextView
         android:id="@+id/tv_two"
@@ -34,7 +35,7 @@
         app:layout_constraintLeft_toRightOf="@id/tv_one"
         app:layout_constraintRight_toRightOf="@id/tv_three"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="联盟" />
+        android:text="联盟" />
 
     <TextView
         android:id="@+id/tv_three"
@@ -49,10 +50,10 @@
         app:layout_constraintLeft_toRightOf="@id/tv_two"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="其它" />
+        android:text="其它" />
     <!--有需要可以自己再添加多个操作项-->
     <ScrollView
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
