--- a/CustomView/mylibrary/src/main/res/layout/activity_chat_trans.xml
+++ b/CustomView/mylibrary/src/main/res/layout/activity_chat_trans.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#75000000"
     android:id="@+id/pop_layout"
-    android:layout_width="200dp"
+    android:layout_width="240dp"
+    android:background="@color/black_75"
     android:layout_height="match_parent">
 
     <TextView
@@ -53,7 +53,7 @@
         android:text="其它" />
     <!--有需要可以自己再添加多个操作项-->
     <ScrollView
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -144,6 +144,7 @@
         android:layout_marginBottom="15dp"
         android:background="@drawable/text_item_bg"
         android:gravity="center"
+        android:onClick="finishActivity"
         android:padding="10dp"
         android:text="取消"
         android:textColor="#999999"
