--- a/CustomView/app/src/main/res/values/styles.xml
+++ b/CustomView/app/src/main/res/values/styles.xml
@@ -23,5 +23,15 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-
+    <style name="Theme_AudioDialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!--Dialog的windowFrame框为无-->
+        <item name="android:windowFrame">@null</item>
+        <!--是否浮现在activity之上-->
+        <item name="android:windowIsFloating">true</item>
+        <!--//是否半透明-->
+        <item name="android:windowIsTranslucent">true</item>
+        <!--/背景是否模糊显示-->
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
 </resources>
