1、[fix]解颜色决资源找不到编译不过的问题

--- a/CustomView/app/src/main/res/layout/activity_splash.xml
+++ b/CustomView/app/src/main/res/layout/activity_splash.xml
@@ -15,9 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:subtitleTextColor="@color/subtitle_text_color"
-            app:titleTextColor="@color/title_text_color">
+            android:background="?attr/colorPrimary">
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
