--- a/CustomView/app/src/main/res/layout/activity_zip.xml
+++ b/CustomView/app/src/main/res/layout/activity_zip.xml
@@ -14,9 +14,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:subtitleTextColor="@color/subtitle_text_color"
-            app:titleTextColor="@color/title_text_color">
+            android:background="?attr/colorPrimary">
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
@@ -25,8 +23,7 @@
         android:id="@+id/zip_src"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:src="@mipmap/zip_background" />
+        android:layout_weight="1" />
 
     <Button
         android:id="@+id/default_theme"
