--- a/CustomView/app/src/main/res/values/styles.xml
+++ b/CustomView/app/src/main/res/values/styles.xml
@@ -40,4 +40,9 @@
         <item name="attr3">attr3 from custom_view_style</item>
         <item name="attr4">attr4 from custom_view_style</item>
     </style>
+
+    <style name="xml_style">
+        <item name="attr2">attr2 from xml_style</item>
+        <item name="attr3">attr3 from xml_style</item>
+    </style>
 </resources>
