--- a/AndroidUI/app/src/main/res/values/colors.xml
+++ b/AndroidUI/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorInitFloatBackground">#b0ffffff</color>
     <color name="colorCollapsedFloatBackground">#e4e4e4</color>
+    <color name="load_success">#03a44e</color>
+    <color name="load_failure">#de0e26</color>
+    <color name="load">#f506d9</color>
 </resources>
