--- a/AndroidUI/app/src/main/res/values/colors.xml
+++ b/AndroidUI/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="load_success">#03a44e</color>
     <color name="load_failure">#de0e26</color>
     <color name="load">#f506d9</color>
+    <color name="grey_level_1">#4A4A4A</color><!--深色-->
+
 </resources>
