feat: 增加TabLayout的使用

--- a/AndroidUI/app/src/main/res/values/styles.xml
+++ b/AndroidUI/app/src/main/res/values/styles.xml
@@ -62,5 +62,9 @@
             <enum name="round" value="2" />
         </attr>
     </declare-styleable>
-
+    <style name="baike_tab_txt">
+        <item name="android:textColor">@color/color_8A8FA4</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:singleLine">true</item>
+    </style>
 </resources>
