--- a/AndroidUI/app/src/main/res/values/colors.xml
+++ b/AndroidUI/app/src/main/res/values/colors.xml
@@ -8,6 +8,10 @@
     <color name="load_success">#03a44e</color>
     <color name="load_failure">#de0e26</color>
     <color name="load">#f506d9</color>
-    <color name="grey_level_1">#4A4A4A</color><!--深色-->
+    <color name="grey_level_1">#4A4A4A</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="color_FF6D33">#FF6D33</color>
+    <color name="color_8A8FA4">#8A8FA4</color>
 
 </resources>
