feat: 增加三种自定义View类型

--- a/AndroidUI/app/src/main/res/layout/activity_view.xml
+++ b/AndroidUI/app/src/main/res/layout/activity_view.xml
@@ -26,5 +26,12 @@
         android:text="StrokeTextViewActivity"
         android:textAllCaps="false" />
 
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:onClick="openCustomActivity"
+        android:text="CustomActivity"
+        android:textAllCaps="false" />
+
 
 </LinearLayout>
