--- a/AndroidUI/app/src/main/res/layout/activity_view.xml
+++ b/AndroidUI/app/src/main/res/layout/activity_view.xml
@@ -23,7 +23,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:onClick="openStrokeActivity"
-        android:text="StrokeTextViewActivity"
+        android:text="TextViewActivity"
         android:textAllCaps="false" />
 
     <Button
