--- a/AndroidUI/app/src/main/res/layout/dialog_bottom_sheet2.xml
+++ b/AndroidUI/app/src/main/res/layout/dialog_bottom_sheet2.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,6 +9,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv_one"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:background="@color/colorPrimary"
@@ -17,14 +17,14 @@
             android:onClick="doclick"
             android:text="啦啦啦啦啦啦啦啦啦"
             android:textColor="@android:color/white"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="doclick"
             android:scaleType="centerCrop"
-            android:src="@mipmap/banner"/>
+            android:src="@mipmap/banner" />
 
         <TextView
             android:layout_width="match_parent"
@@ -34,14 +34,14 @@
             android:onClick="doclick"
             android:text="啦啦啦啦啦啦啦啦啦"
             android:textColor="@android:color/white"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="doclick"
             android:scaleType="centerCrop"
-            android:src="@mipmap/banner"/>
+            android:src="@mipmap/banner" />
 
         <TextView
             android:layout_width="match_parent"
@@ -51,13 +51,13 @@
             android:onClick="doclick"
             android:text="啦啦啦啦啦啦啦啦啦"
             android:textColor="@android:color/white"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="doclick"
             android:scaleType="centerCrop"
-            android:src="@mipmap/banner"/>
+            android:src="@mipmap/banner" />
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
