--- a/AndroidUI/app/src/main/res/layout/activity_view.xml
+++ b/AndroidUI/app/src/main/res/layout/activity_view.xml
@@ -33,5 +33,12 @@
         android:text="CustomActivity"
         android:textAllCaps="false" />
 
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:onClick="openMaskFilterActivity"
+        android:text="MaskFilterActivity"
+        android:textAllCaps="false" />
+
 
 </LinearLayout>
